fix: flicker of hero block on article pages

--- a/templates/article-page/article-page.css
+++ b/templates/article-page/article-page.css
@@ -69,6 +69,7 @@
 .article-page .breadcrumb {
   position: absolute;
   top: 1rem;
+  height: 50px;
 }
 
 .article-page .breadcrumb .icon-chevron {
